tests/dataset/tpc-ds/compiler/c/q3.error
/tmp/q3.c: In function ‘test_TPCDS_Q3_result’:
/tmp/q3.c:231:7: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  231 |       (tmp_item_t){
      |       ^
/tmp/q3.c:235:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  235 |   if (test_TPCDS_Q3_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/q3.c:239:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  239 |       if (test_TPCDS_Q3_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/q3.c: In function ‘main’:
/tmp/q3.c:295:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  295 |   test_TPCDS_Q3_result_result = result;
      |                                 ^~~~~~
